--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,11 @@ jobs:
           - target: x86_64-apple-darwin
             os: macos-latest
             build-name: postgres_migrator
+            artifact-name: relay-bin-macos-x64
           - target: aarch64-apple-darwin
             os: macos-latest
             build-name: postgres_migrator
+            artifact-name: relay-bin-macos-arm64
     runs-on: ${{ matrix.target.os }}
     steps:
       - uses: actions/checkout@v2
