--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,9 +6,5 @@
 	"access": "public",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
-	"ignore": [],
-	"___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
-		"onlyUpdatePeerDependentsWhenOutOfRange": true,
-		"useCalculatedVersionForSnapshots": true
-	}
+	"ignore": []
 }
